--- a/index.html
+++ b/index.html
@@ -132,6 +132,10 @@
       });
       var swiper2 = new Swiper(".main_slider", {
         spaceBetween: 10,
+        loop:true,
+        autoplay: {
+            delay: 2500,
+        },
         pagination: {
             el: ".swiper-pagination",
             clickable: true,
